<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile"/>
        <item android:id="@+id/nav_classes"
            android:icon="@drawable/ic_class"
            android:title="@string/my_classes"/>
        <item android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/my_lessons"/>
        <item android:id="@+id/nav_join"
            android:icon="@drawable/ic_plus"
            android:title="@string/join_class"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out"/>

    </group>

</menu>