<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/school"
        android:text="@string/my_teacher"
        android:textColor="@color/lightGreen"
        android:textSize="60sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/customshape"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:hint="@string/e_mail"
            android:background="@null"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/lightGrey"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:layout_marginStart="8dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/customshape"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/lightGrey"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp">

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:hint="@string/password"
            android:textColorHint="@color/lightGrey"
            android:inputType="textPassword"
            android:textColor="@color/white"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"

            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_login"
                android:fontFamily="@font/latobold"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:text="Don't have an account?"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/signupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Sign up here"
                android:textSize="15dp"
                android:textColor="@color/lightGreen"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginTop="40dp"
            android:alpha="0.3"
            android:src="@drawable/thastudent" />


    </LinearLayout>

</LinearLayout>